# cnki-mcp-server

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
cnki_mcp/: __init__.py  __main__.py  browser.py  citation.py  config.py  detail.py  exceptions.py  export.py  journals.py  match.py  search.py  server.py  utils.py
tests/: conftest.py  test_citation.py  test_config.py  test_export.py  test_match.py  test_utils.py
